--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
