--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
         android:theme="@style/Theme.OrthodoxSaintDatabase"
         tools:targetApi="m">
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.LoginActivity"
+
             android:exported="true">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +30,14 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity
+            android:name=".SplashScreen.SplashScreenActivity"
+            android:theme="@style/Theme.OrthodoxSaintDatabase"/>
+
+        <!--android:theme="@style/Theme.SplashScreen"-->
+        <activity android:name=".Activity.MainActivity"/>
+
     </application>
 
 </manifest>
